원상복구 취소.

--- a/app/policy_240621.html
+++ b/app/policy_240621.html
@@ -79,10 +79,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<section id="Subcontents">
 			<article class="Subarticle">
 
-				<select name="" id="">
-					<option value="">내용 전문 (변경일 - 2021. 1. 14)</option>
-					<option value="">내용 전문 (변경일 - 2019. 5. 2)</option>
-				</select>
+				<div>
+					<select name="" id="">
+						<option value="">내용 전문 (변경일 - 2021. 1. 14)</option>
+						<option value="">내용 전문 (변경일 - 2019. 5. 2)</option>
+					</select>
+				</div>
 
 				<h3>개인정보 처리방침</h3>
 				<div class="policy_box">
