--- a/app/policy_240621.html
+++ b/app/policy_240621.html
@@ -51,6 +51,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</header>
 <style>
 .rule_box h4 {margin:0; padding:0; font-size:20px; font-weight:bold;}
+
+/* 240621 추가 */
 .terms_box,.policy_box,.rule_box{white-space:pre-line;}
 
 /* 개인정보 처리 표시 라벨링 */
@@ -59,10 +61,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 .privacy_label > strong {display:inline-block;}
 .privacy_label ul {display:flex; flex-wrap:wrap; padding:40px 20px; gap:40px 0; border:1px solid #ddd;}
 .privacy_label ul li {width:33.3%; text-align:center;}
+.privacy_label ul li a {display:inline-block; line-height:1em;}
 .privacy_label ul li span.icon {display:inline-flex; align-items:center; height:88px;}
 .privacy_label ul li span.icon img {max-height:100%;}
 .privacy_label ul li span.txt {display:block; margin-top:1em; text-align:center; font-weight:bold;}
 @media screen and (max-width: 600px){
+	.privacy_label ul {gap:20px 0; padding:20px;}
 	.privacy_label ul li {width:50%;}
 }
 /* // 개인정보 처리 표시 라벨링 */
@@ -74,6 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 .privacy_index ul li + li {margin-top:1em;}
 .privacy_index ul li a {display:inline-block; color:#009ddf; font-size:0.875em; text-decoration:none; word-break:keep-all;}
 /* // 개인정보처리방침 인덱스 */
+/* 240621 추가 */
 </style>	
 	<main id="container">
 		<section id="Subcontents">
@@ -94,28 +99,40 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="tit"><strong>【 주요 개인정보 처리 표시(라벨링) 】</strong></div>
 						<ul>
 							<li>
-								<span class="icon"><img src="./images/privacy_icon_01.png" alt="아이콘1"></span>
-								<span class="txt">일반 개인정보 수집</span>
+								<a href="#g" target="_blank">
+									<span class="icon"><img src="./images/privacy_icon_01.png" alt="아이콘1"></span>
+									<span class="txt">일반 개인정보 수집</span>
+								</a>
 							</li>
 							<li>
-								<span class="icon"><img src="./images/privacy_icon_02.png" alt="아이콘2"></span>
-								<span class="txt">개인정보의 보유기간</span>
+								<a href="#g" target="_blank">
+									<span class="icon"><img src="./images/privacy_icon_02.png" alt="아이콘2"></span>
+									<span class="txt">개인정보의 보유기간</span>
+								</a>
 							</li>
 							<li>
-								<span class="icon"><img src="./images/privacy_icon_03.png" alt="아이콘3"></span>
-								<span class="txt">개인정보의 안전성 확보조치</span>
+								<a href="#g" target="_blank">
+									<span class="icon"><img src="./images/privacy_icon_03.png" alt="아이콘3"></span>
+									<span class="txt">개인정보의 안전성 확보조치</span>
+								</a>
 							</li>
 							<li>
-								<span class="icon"><img src="./images/privacy_icon_04.png" alt="아이콘4"></span>
-								<span class="txt">개인정보의 제공</span>
+								<a href="#g" target="_blank">
+									<span class="icon"><img src="./images/privacy_icon_04.png" alt="아이콘4"></span>
+									<span class="txt">개인정보의 제공</span>
+								</a>
 							</li>
 							<li>
-								<span class="icon"><img src="./images/privacy_icon_05.png" alt="아이콘5"></span>
-								<span class="txt">개인정보 처리 위탁</span>
+								<a href="#g" target="_blank">
+									<span class="icon"><img src="./images/privacy_icon_05.png" alt="아이콘5"></span>
+									<span class="txt">개인정보 처리 위탁</span>
+								</a>
 							</li>
 							<li>
-								<span class="icon"><img src="./images/privacy_icon_06.png" alt="아이콘6"></span>
-								<span class="txt">고충처리부서</span>
+								<a href="#g" target="_blank">
+									<span class="icon"><img src="./images/privacy_icon_06.png" alt="아이콘6"></span>
+									<span class="txt">고충처리부서</span>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -308,16 +325,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					3) 제공하는 개인정보 : 이동전화번호, 이름, 생년월일, 성별, 통신사정보, 이용자식별값(CI), 단말기 정보(단말기 ID, OS정보)
 					4) 보유 및 이용 기간 : 통신사 PASS 앱 회원 탈퇴 시 까지(관계 법령에 따라 필요한 경우에는 법에서 정하는 기간 동안 보관)
 
-					4. 대행사
-					1) 제공받는자 : “회사”와의 대행계약 또는 제휴계약을 통해 “이용기관”과 “회사” 사이 “서비스” 제공을 위한 인증서 서명 등 인증업무 및 그에 부수하는 업무를 제공하거나 대행하는 자 또는 “이용기관”과 “회사”와의 사이에서 “서비스” 제공을 위한 중개업무를 하는 자를 말합니다.
-					2) 제공 받는 자의 개인정보 이용 목적 : 인증서 서비스 중개, 고객문의 대응
-					3) 제공하는 개인정보 : 이동전화번호, 이름, 생년월일, 성별, 통신사정보, 이용자식별값(CI), 인증서 정보
-					4) 보유 및 이용 기간 : 통신사 PASS 앱 회원 탈퇴 시 까지(관계 법령에 따라 필요한 경우에는 법에서 정하는 기간 동안 보관)
-
-					<a href="/policy_popup"><ins style="position:relative; color:#6c51ff; font-size: 20px; text-decoration:none;"><i style="display:block; position:absolute; bottom:-1px; left:0; width:100%; height:2px; background-color:#6c51ff;"></i><strong>개인정보 제3자 제공 현황보기</strong></ins>(클릭 시 세부사항 확인가능)</a>
-
-					※ “회사”는 이용기관의 추가/변경되는 경우 서비스 홈페이지(www.passauth.co.kr)를 통해 안내 드립니다.
-					※ 본 개인정보 제3자 제공은 ‘통신사’ 및 ‘이용기관’에서 이용자의 동의를 얻은 후 ‘주식회사 아톤’에게 제공하고 있으며, ‘주식회사 아톤’은 본인인증 서비스 제공(계약 이행)을 위해 개인정보를 제공하고 있습니다. 
+					<a href="/policy_popup"><ins style="position:relative; color:#6c51ff; font-size: 20px; text-decoration:none;"><i style="display:block; position:absolute; bottom:-1px; left:0; width:100%; height:2px; background-color:#6c51ff;"></i><strong>개인정보 제3자 제공기관 현황보기</strong></ins>(클릭 시 세부사항 확인가능)</a>
 
 
 					<strong id="A05">제5조 (개인정보처리 위탁)</strong>
